# Graph-RAG-Learning

./: .gitignore  README.md  graph_mcp.env.example  pyproject.toml  pytest.ini  requirements.txt  test_complete_system.py
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/docs/research/: 2025-06-18_analyze-pytest-test-failures-in-python-test-functi.md
.taskmaster/tasks/: tasks.json
data/: graph_data.bak1
docs/: database_interface.md
examples/: database_demo.py
src/: __init__.py  config.py  server.py
src/database/: __init__.py  base.py  neo4j_adapter.py  networkx_adapter.py
src/models/: __init__.py  learnt.py  meta_rule_manager.py  rule.py
src/tools/: __init__.py  learning_tools.py  rule_tools.py
tests/: conftest.py  test_adapter_consistency.py  test_config.py  test_enhanced_models.py  test_learning_tools.py  test_models_integration.py  test_networkx_persistence.py  test_networkx_stress_tests.py  test_rule_tools.py  test_server.py
